--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '21'
-        distribution: 'Corretto'
+        distribution: 'Amazon Corretto'
         cache: maven
         
     #- name: Build with Maven
