--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,8 +16,8 @@ jobs:
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '21'
-        distribution: 'Amazon Corretto'
+        java-version: '17'
+        distribution: 'temurin'
         cache: maven
         
     #- name: Build with Maven
