--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>3.3.1</version>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
+                </configuration>
                 <executions>
                     <execution>
                         <id>checkstyle</id>
@@ -39,6 +43,8 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>3.3.1</version>
                 <configuration>
+                    <source>7</source>
+                    <target>7</target>
                     <configLocation>checkstyle.xml</configLocation>
                 </configuration>
                 <reportSets>
