--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>com.example</groupId>
     <artifactId>algoritmo</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <java.version>17</java.version>
+    </properties>
     
     <build>
         <plugins>
@@ -16,8 +19,6 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>3.3.1</version>
                 <configuration>
-                    <source>7</source>
-                    <target>7</target>
                     <configLocation>checkstyle.xml</configLocation>
                 </configuration>
                 <executions>
@@ -41,8 +42,6 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>3.3.1</version>
                 <configuration>
-                    <source>7</source>
-                    <target>7</target>
                     <configLocation>checkstyle.xml</configLocation>
                 </configuration>
                 <reportSets>
