--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>3.3.1</version>
                 <configuration>
+                    <source>${java.version}</source> 
+                    <target>${java.version}</target> 
                     <configLocation>checkstyle.xml</configLocation>
                 </configuration>
                 <executions>
@@ -42,6 +44,8 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>3.3.1</version>
                 <configuration>
+                    <source>${java.version}</source> 
+                    <target>${java.version}</target> 
                     <configLocation>checkstyle.xml</configLocation>
                 </configuration>
                 <reportSets>
