--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,12 +13,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
+    #- name: Set up JDK 17
+    #  uses: actions/setup-java@v3
+    #  with:
+    #    java-version: '17'
+    #    distribution: 'temurin'
+    #    cache: maven
+    - name: Set up JDK 21
+      uses: actions/setup-java@v2
       with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
+          java-version: 'adopt@1.21'
+          maven-version: '3.8.4'
         
     #- name: Build with Maven
     #  run: mvn -B package --file pom.xml
