--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,12 +19,15 @@ jobs:
     #    java-version: '17'
     #    distribution: 'temurin'
     #    cache: maven
-    - name: Set up JDK 21
-      uses: actions/setup-java@v2
-      with:
-          java-version: 'adopt@1.21'
-          maven-version: '3.8.4'
-          distribution: 'repo'
+    - name: Download and Install Amazon Corretto 21
+      run: |
+          curl -L https://corretto.aws/downloads/latest/amazon-corretto-11-x64-linux-jdk.tar.gz -o corretto.tar.gz
+          tar -xzf corretto.tar.gz
+          export JAVA_HOME=$PWD/amazon-corretto-11-x64-linux-jdk
+
+    - name: Set JAVA_HOME environment variable
+      run: echo "JAVA_HOME=$JAVA_HOME" >> $GITHUB_ENV
+
 
     #- name: Build with Maven
     #  run: mvn -B package --file pom.xml
