--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
             </plugin>
                  
             <!-- Configurazione Maven Checkstyle -->
@@ -26,6 +30,8 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>3.3.1</version>
                 <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <configLocation>checkstyle.xml</configLocation>
                 </configuration>
                 <executions>
@@ -49,6 +55,8 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>3.3.1</version>
                 <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <configLocation>checkstyle.xml</configLocation>
                 </configuration>
                 <reportSets>
