--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,36 +12,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    #- name: Set up JDK 17
-    #  uses: actions/setup-java@v3
-    #  with:
-    #    java-version: '17'
-    #    distribution: 'temurin'
-    #    cache: maven
-    - name: Download and Install Amazon Corretto 21
-      run: |
-          curl -L https://corretto.aws/downloads/latest/amazon-corretto-21-x64-linux-jdk.tar.gz -o corretto.tar.gz
-          tar -xzf corretto.tar.gz
-          export JAVA_HOME=$PWD/amazon-corretto-21-x64-linux-jdk
+      - name: Install Amazon Corretto 21
+        run: |
+          curl -L -o /tmp/corretto-21.tar.gz https://corretto.aws/downloads/latest/amazon-corretto-21-x64-linux-jdk.tar.gz
+          sudo tar xf /tmp/corretto-21.tar.gz -C /usr/local/
+          export JAVA_HOME=/usr/local/amazon-corretto-21-x64-linux-jdk
+          export PATH=$JAVA_HOME/bin:$PATH
 
-    - name: Set JAVA_HOME environment variable
-      run: echo "JAVA_HOME=$JAVA_HOME" >> $GITHUB_ENV
+      - name: Checkout code
+        uses: actions/checkout@v2
 
+      - name: Install Maven
+        run: sudo apt-get install maven -y
 
-    #- name: Build with Maven
-    #  run: mvn -B package --file pom.xml
-    
-    #- name: Install Maven
-      #run: sudo apt-get install maven -y
-      
-    - name: Build with Maven and generate Checkstyle report
-      run: mvn clean verify checkstyle:checkstyle --file pom.xml 
-      continue-on-error: true
-          
-    - name: Archive Checkstyle report
-      uses: actions/upload-artifact@v2
-      with:
-        name: checkstyle-report
-        path: target/site/checkstyle.html
+      - name: Build with Maven and generate Checkstyle report
+        run: |
+          mvn clean verify checkstyle:checkstyle --file pom.xml
+        continue-on-error: true
 
+      - name: Archive Checkstyle report
+        uses: actions/upload-artifact@v2
+        with:
+          name: checkstyle-report
+          path: target/site/checkstyle.html
