--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,6 +18,7 @@ jobs:
           sudo tar xf /tmp/corretto-21.tar.gz -C /usr/local/
           export JAVA_HOME=/usr/local/amazon-corretto-21-x64-linux-jdk
           export PATH=$JAVA_HOME/bin:$PATH
+          java -version
 
       - name: Checkout code
         uses: actions/checkout@v2
