--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,44 +7,32 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  test:
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: ubuntu-latest
+            java: 8
+          - os: ubuntu-latest
+            java: 21
+    runs-on: ${{ matrix.os }}
     steps:
-      - name: Install Amazon Corretto 21
-        run: |
-          curl -L -o /tmp/corretto-21.tar.gz https://corretto.aws/downloads/latest/amazon-corretto-21-x64-linux-jdk.tar.gz
-          sudo tar xf /tmp/corretto-21.tar.gz -C /usr/local/
-          export JAVA_HOME=/usr/local/amazon-corretto-21-x64-linux-jdk
-          export PATH=$JAVA_HOME/bin:$PATH
-          java -version
-
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v4
+      
+    - name: Setup JDK
+      uses: actions/setup-java@v3
+      with:
+        distribution: temurin
+        java-version: ${{ matrix.java }}
+        cache: sbt
         
-      - name: Set up Java
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17' # Utilizza la versione di Java fornita dalle GitHub Actions
-          distribution: 'temurin'
-
-      - name: Install Maven
-        run: sudo apt-get install maven -y
-
-      - name: Use Amazon Corretto 21 for Maven
-        run: |
-          export JAVA_HOME=/usr/local/amazon-corretto-21-x64-linux-jdk
-          export PATH=$JAVA_HOME/bin:$PATH
-          java -version
-
-      - name: Build with Maven and generate Checkstyle report
-        run: |
-          mvn clean verify checkstyle:checkstyle --file pom.xml
-        continue-on-error: true
-
-      - name: Archive Checkstyle report
-        uses: actions/upload-artifact@v2
-        with:
-          name: checkstyle-report
-          path: target/site/checkstyle.html
+    - name: Verify Java verison
+      run: java -version
+      
+    - name: Build and test
+      shell: bash
+      run: sbt -v +test
+      
+    
